Completed signup functionality

--- a/group-1-project-2/server/views/partials/footer.handlebars
+++ b/group-1-project-2/server/views/partials/footer.handlebars
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
+<footer class="container-fluid bg-4 text-center" 
   {{#if username}}
   <p>{{lastloginmsg}}</p>
   {{else}}
